kubernetes/frontend/ingress.yaml
#
# Ingress routing.
#

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: "microservices-example-ingress"
  annotations:
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /api/config
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port: 
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-api-1-svc.api-1
            port: 
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
